# Task-Management-System

./: .env.example  .gitignore  AI_WORKFLOW.md  CLAUDE.md  NEXUS-7 开发规划书 v0.2.md  NEXUS-7 开发规划书 v0.3 增量修订.md  NEXUS-7 整合规划书 v1.0.md  NEXUS-7 系统规划书.md  README.md  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  turbo.json  个人档案信息模块设计方案.md  个人等级模块规划书.md  任务管理系统.md  使用过程的问题.md  商城子系统规划书.md  宿主档案子系统规划书.md
apps/desktop/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.vue  api.ts  focus-timer.ts  live2d-loader.ts  store.test.ts  store.ts  styles.css  tauri-env.ts
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/desktop/src/components/: ChatWindow.vue  FloatingCompanion.vue  (+4 more)
apps/server/: package.json
apps/server/src/: activity-watch.ts  app.controller.ts  app.module.ts  browser-history.ts  config.test.ts  config.ts  main.ts  nexus.service.test.ts  nexus.service.ts  scheduler.service.ts  vault-writer.ts
docs/: anthropic-prompt-probe.md  current-sprint.md  e2e-acceptance.md
evals/dialogue-agent/: test-001-low-energy.json
evals/planning-agent/: test-001-vague-goal.json
evals/review-agent/: test-001-honest-review.json
obsidian-vault-template/: README.md
prompts/companion/: v0.1.md
prompts/dialogue/: v0.1.md
prompts/planning/: v0.1.md
prompts/profile/: v0.1.md
prompts/review/: v0.1.md
scripts/: check-utf8.ts  e2e-desktop.ts  e2e-server.ts  probe-ai.ts  probe-anthropic.ts  run-evals.ts  seed-maxed.ts  smoke-test.ts
tests/e2e/: execution-console.spec.ts
(+9 files in other folders)
